# risc0-blob-inclusion

host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
