[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.20.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
#celestia-types = {path = "../../lumina/types", default-features = false}
celestia-types = {git = "https://github.com/S1nus/lumina.git", branch="connor/index-field", default-features = false}
serde_json = "1.0.114"
bincode = "1.3.3"
#nmt-rs = {path = "../../nmt-rs", features=["serde"]}
nmt-rs = {git = "https://github.com/S1nus/nmt-rs.git", branch="rz", features=["serde"]}
anyhow = "1.0"
